--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
     "@babel/register": "^7.25.7",
+    "html-webpack-plugin": "^5.6.0",
     "webpack-cli": "^5.1.4"
   }
 }
