--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
     "@babel/register": "^7.25.7",
+    "compression-webpack-plugin": "^11.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack-cli": "^5.1.4"
   }
 }
