--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-loader": "^9.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "webpack": "^5.95.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
     "@babel/register": "^7.25.7",
+    "babel-loader": "^9.2.1",
     "compression-webpack-plugin": "^11.1.0",
+    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.0",
     "terser-webpack-plugin": "^5.3.10",
     "webpack-cli": "^5.1.4"
