--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf extension && webpack --config webpack.config.js"
+    "build": "rm -rf extension && webpack --config webpack.config.js",
+    "dev": "rm -rf extension && webpack serve --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "webpack": "^5.95.0"
@@ -21,11 +23,18 @@
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
     "@babel/register": "^7.25.7",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "compression-webpack-plugin": "^11.1.0",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "postcss": "^8.4.47",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.13",
     "terser-webpack-plugin": "^5.3.10",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
