--- a/src/static-files/manifest.json
+++ b/src/static-files/manifest.json
@@ -5,5 +5,15 @@
     "version": "1.0",
     "action": {
         "default_popup": "popup.html"
-    }
+    },
+    "content_scripts": [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "content.js"
+            ]
+        }
+    ]
 }
